--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.0.14",
     "tw-animate-css": "^1.2.5",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
