--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "tailwindcss": "^4.0.14",
     "tw-animate-css": "^1.2.5",
     "typescript": "^5.8.3",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "lodash.debounce": "^4.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
