--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.0.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -23,8 +24,7 @@
     "tailwindcss": "^4.0.14",
     "tw-animate-css": "^1.2.5",
     "typescript": "^5.8.3",
-    "zustand": "^5.0.3",
-    "lodash.debounce": "^4.0.8"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
